--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    implementation 'com.github.zcweng:switch-button:0.0.3@aar'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
 }
